--- a/autoplayyndx.html
+++ b/autoplayyndx.html
@@ -5,16 +5,18 @@
     <script type="text/javascript">
         function redirect() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            var yandexMusicLink = "https://music.yandex.ru/artist/21868458?utm_medium=copy_link";
-            
-            // Check if the user is on a mobile device
+            var webLink = "https://music.yandex.ru/album/33416599/track/131441112";
+            var androidAppLink = "intent://music.yandex.ru/track/131441112#Intent;scheme=https;package=ru.yandex.music;end;";
+            var iosAppLink = "yandexmusic://track/131441112"; // Might not work on iOS
+
             if (/android/i.test(userAgent)) {
-                window.location.href = yandexMusicLink;
+                window.location.href = androidAppLink;
+                setTimeout(function () { window.location.href = webLink; }, 1000);
             } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                window.location.href = yandexMusicLink;
+                window.location.href = iosAppLink;
+                setTimeout(function () { window.location.href = webLink; }, 1000);
             } else {
-                // For desktop or unsupported devices, use the web link
-                window.location.href = yandexMusicLink;
+                window.location.href = webLink;
             }
         }
     </script>
