--- a/autoplayyndx.html
+++ b/autoplayyndx.html
@@ -5,17 +5,17 @@
     <script type="text/javascript">
         function redirect() {
             var userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            var smartLink = "https://li.sten.to/dilarasupermodel"; // Replace with your ListenTo smart link
+            // Yandex Music deep link format (replace with actual track URL)
+            var yandexMusicLink = "yandexmusic://track/131441112"; 
+            var webLink = "https://music.yandex.ru/album/33416599/track/131441112";
 
-            // Check if the user is on a mobile device
             if (/android/i.test(userAgent)) {
-                window.location.href = smartLink;
-                setTimeout(function () { window.location.href = smartLink; }, 1000);
+                window.location.href = yandexMusicLink;
             } else if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                window.location.href = smartLink;
-                setTimeout(function () { window.location.href = smartLink; }, 1000);
+                window.location.href = yandexMusicLink;
             } else {
-                window.location.href = smartLink;
+                // For desktop or unsupported devices, use the web link
+                window.location.href = webLink;
             }
         }
     </script>
